--- a/hw1/p5.yaml
+++ b/hw1/p5.yaml
@@ -46,3 +46,9 @@
 # the example above.
 # Remember to ensure that each idea is distinct and concise, and each
 # "topic" must be one of the listed course topics.
+
+- topic:
+  idea:
+
+- topic:
+  idea: 
